--- a/index.html
+++ b/index.html
@@ -4,19 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CLEAN MARKUP = GOOD KARMA.
-      Hi source code lover,
-
-      you're a curious person and a fast learner ;)
-      Let's make something beautiful together. Contribute on Github:
-      https://github.com/webslides/webslides
-
-      Thanks!
-    -->
-
     <!-- SEO -->
     <title>WebSlides Keynote: Make a Keynote presentation using HTML</title>
-    <meta name="description" content="WebSlides is the easiest way to make HTML presentations. Just essential features, clean code, and lovely CSS.">
+    <meta name="description" content="Webslide powerpoint for Jim Wei">
 
     <!-- URL CANONICAL -->
     <!-- <link rel="canonical" href="http://your-url.com/permalink"> -->
@@ -25,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
     <!-- CSS Base -->
-    <link rel="stylesheet" type='text/css' media='all' href="../static/css/webslides.css">
+    <link rel="stylesheet" type='text/css' media='all' href="webslides.css">
 
     <!-- Optional - CSS SVG Icons (Font Awesome) -->
     <link rel="stylesheet" type="text/css" media="all" href="../static/css/svg-icons.css">
@@ -420,7 +410,7 @@
     <!--main-->
 
     <!-- Required -->
-    <script src="../static/js/webslides.js"></script>
+    <script src="webslides.js"></script>
 
     <script>
       window.ws = new WebSlides();
