--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- SEO -->
-    <title>WebSlides Keynote: Make a Keynote presentation using HTML</title>
-    <meta name="description" content="Webslide powerpoint for Jim Wei">
+    <title>Jim's WebSlides Keynote</title>
+    <meta name="description" content="Webslide Powerpoint for Jim Wei">
 
     <!-- URL CANONICAL -->
     <!-- <link rel="canonical" href="http://your-url.com/permalink"> -->
