--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@webslides"> <!-- EDIT -->
-    <meta name="twitter:creator" content="@jlantunez"> <!-- EDIT -->
+    <meta name="twitter:site" content="@thejimwei"> <!-- EDIT -->
+    <meta name="twitter:creator" content="@thejimwei"> <!-- EDIT -->
     <meta name="twitter:title" content="Make a Keynote presentation using HTML"> <!-- EDIT -->
-    <meta name="twitter:description" content="WebSlides is the easiest way to make HTML presentations. 120+ free slides ready to use."> <!-- EDIT -->
+    <meta name="twitter:description" content="Jim's Webslides."> <!-- EDIT -->
     <meta name="twitter:image" content="./static/images/share-webslides.jpg"> <!-- EDIT -->
 
     <!-- FAVICONS -->
