increased text size for <p> using  class="text-intro"

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
               <li>
                 <div>
                   <h2>
-                    <svg class="fa-link">
-                      <use xlink:href="#fa-link"></use>
+                    <svg class="fa-space-shuttle">
+                      <use xlink:href="#fa-space-shuttle"></use>
                     </svg>
                     <a href="https://jimhwei.github.io/tutorials-demos/Code-Train/DataAPISeries/03_fetch_iss/index.html" target="_blank" rel="noopener noreferrer">Live ISS Tracker</a>
                   </h2>
@@ -153,8 +153,8 @@
               <li>
                 <div>
                   <h2>
-                    <svg class="fa-link">
-                      <use xlink:href="#fa-link"></use>
+                    <svg class="fa-camera">
+                      <use xlink:href="#fa-camera"></use>
                     </svg>
                     
                     <a href="https://github.com/jimhwei/pci-python-cookbook/blob/main/ihs-image-merging.py" target="_blank" rel="noopener noreferrer">Remote Sensing Automation</a>
@@ -165,8 +165,8 @@
               <li>
                 <div>
                   <h2>
-                    <svg class="fa-clock-o">
-                      <use xlink:href="#fa-clock-o"></use>
+                    <svg class="fa-map">
+                      <use xlink:href="#fa-map"></use>
                     </svg>
                     <a href="https://jimhwei.github.io/geoignite-leaflet/" target="_blank" rel="noopener noreferrer">Leaflet Census Data Visualization</a>
                   </h2>
@@ -212,7 +212,7 @@
                   Environmental Modelling
                 </h2>
                 <p class="text-intro">Topo to Raster, IDW, Natural Neighbour, Spline</p>
-                <p>Geostatistical modelling using different interpolation techniques to explore autocorrelation.</p>
+                <p class="text-intro">Geostatistical modelling using different interpolation techniques to explore autocorrelation.</p>
               </div>
               <!-- end .flex-content-->
             </div>
@@ -228,7 +228,7 @@
             <h2>Terrain Modelling Poster</h2>
               <figure><img class="aligncenter" src="./static/images/LCP.png" alt="Picture of Jim"></figure>
           </div>
-          <p>Created a trail using least cost paths, viewshed analysis and DEM visualization (ArcScene)</p>
+          <p class="text-intro">Created a trail using least cost paths, viewshed analysis and DEM visualization (ArcScene)</p>
           <!-- .end .wrap -->
         </section>
 
@@ -242,10 +242,10 @@
                 </h2>
                 <p class="text-intro">Used different statistical techniques to explore Toronto Housing Prices in 2011. For example: </p>
                 <ul>
-                  <li>Regression Analysis</li>
-                  <li>Ordinary Least Square (OLS)</li>
-                  <li>Moran's I</li>
-                  <li>Geographically Weighted Regression (GWR)</li>
+                  <li class="text-intro">Regression Analysis</li>
+                  <li class="text-intro">Ordinary Least Square (OLS)</li>
+                  <li class="text-intro">Moran's I</li>
+                  <li class="text-intro">Geographically Weighted Regression (GWR)</li>
                 </ul>
               </div>
               <!-- end .flex-content-->
@@ -355,15 +355,15 @@
                 <h2>My Current Projects</h2>
                 <p></p>
                 <ol>
-                  <p>Building an <a href="https://jimhwei.github.io/webgis-web-charlie/" target="_blank" rel="noopener noreferrer"> interactive web map solution</a> for Sustainable Cobourg in <b>Northumberland County</b>.
+                  <p  class="text-intro">Building an <a href="https://jimhwei.github.io/webgis-web-charlie/" target="_blank" rel="noopener noreferrer"> interactive web map solution</a> for Sustainable Cobourg in <b>Northumberland County</b>.
                   </p>
-                  <p>Which involves:</p>
-                  <li>A platform for food distribution supply chain visualization</li>
-                  <li>Using open data to develop a geodatabases</li>
-                  <li>
+                  <p class="text-intro">Which involves:</p>
+                  <li class="text-intro">A platform for food distribution supply chain visualization</li>
+                  <li class="text-intro">Using open data to develop a geodatabases</li>
+                  <li class="text-intro">
                     Setting up automation workflows                    
                     </li>
-                  <li>
+                  <li class="text-intro">
                     Embedding it to the organization website
                   </li>
                 </ol>
@@ -373,7 +373,7 @@
                 <a href="https://storymaps.arcgis.com/stories/d559d2df48d74b64acde9efb29894152" target="_blank" rel="noopener noreferrer">
                   <figure><img class="aligncenter" src="./static/images/food-desert.png" alt="Picture of Jim"></figure>
                 </a>
-                <figcaption>
+                <figcaption  class="text-intro">
                   <a href="https://storymaps.arcgis.com/stories/d559d2df48d74b64acde9efb29894152" target="_blank" rel="noopener noreferrer">Delineating food deserts</a>
                    and creating regions using multi-criteria decision analysis
                 </figcaption>
@@ -388,20 +388,20 @@
         <!-- End -->
         <section class="bg-apple aligncenter">
           <h2><strong>Thank you!</strong></h2>
-          <p>My sample work in my 
+          <p class="text-intro" >My sample work in my 
             <a href="https://jimhwei.github.io/post/fleming/" target="_blank" rel="noopener noreferrer">
               personal blog
             </a>
           </p>
 
-          <p>
+          <p class="text-intro">
             <a href="https://arcg.is/iWOim" target="_blank" rel="noopener noreferrer">
               Story map
             </a>
             about my Esri GIS development.
           </p>
 
-            <p>You can find me on <a href="https://www.linkedin.com/in/jimwei/" title="Jim's LinkedIn">LinkedIn</a> and <a href="https://twitter.com/thejimwei" title="@thejimwei on Twitter">Twitter</a></p>
+            <p class="text-intro">You can find me on <a href="https://www.linkedin.com/in/jimwei/" title="Jim's LinkedIn">LinkedIn</a> and <a href="https://twitter.com/thejimwei" title="@thejimwei on Twitter">Twitter</a></p>
             <h4 class="text-emoji zoomIn">😎</h4>
         </section>
 
